--- a/clusters/ha-k3s/monitoring-kustomization.yaml
+++ b/clusters/ha-k3s/monitoring-kustomization.yaml
@@ -10,5 +10,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   targetNamespace: monitoring
-
+  dependsOn:
+    - name: flux-system
