--- a/flux-system/helmrepositories/prometheus-community.yaml
+++ b/flux-system/helmrepositories/prometheus-community.yaml
@@ -4,6 +4,7 @@ metadata:
   name: prometheus-community
   namespace: flux-system
 spec:
+  type: oci
   interval: 1h
-  url: https://prometheus-community.github.io/helm-charts
+  url: oci://ghcr.io/prometheus-community/charts
 
