--- a/infrastructure/monitoring/base/helmrelease.yaml
+++ b/infrastructure/monitoring/base/helmrelease.yaml
@@ -15,6 +15,10 @@ spec:
         namespace: flux-system
   values:
     grafana:
+      admin:
+        existingSecret: grafana-admin
+        userKey: admin-user
+        passwordKey: admin-password
       adminPassword: admin
       service:
         type: NodePort
