--- a/flux-system/helmrepositories/prometheus-community.yaml
+++ b/flux-system/helmrepositories/prometheus-community.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus-community
   namespace: flux-system
 spec:
-  type: oci
+  #type: oci
+  #url: oci://ghcr.io/prometheus-community/charts
   interval: 1h
-  url: oci://ghcr.io/prometheus-community/charts
-
+  url: https://prometheus-community.github.io/helm-charts
